添加通用过滤器拦截记录请求日志，添加日志查询功能