@@ -1,8 +1,6 @@
 package com.xh.common.core.dao;
 
-import cn.dev33.satoken.stp.StpUtil;
-import com.xh.common.core.dto.SysUserDTO;
-import com.xh.common.core.entity.BaseEntity;
+import com.xh.common.core.entity.AutoSet;
 import com.xh.common.core.utils.CommonUtil;
 import com.xh.common.core.utils.WebLogs;
 import com.xh.common.core.web.PageQuery;
@@ -12,6 +10,8 @@ import jakarta.persistence.Column;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
 import jakarta.persistence.Transient;
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.namedparam.BeanPropertySqlParameterSource;
@@ -24,27 +24,27 @@ import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Repository(value = "baseJdbcDao")
-@SuppressWarnings("all")
 public class BaseJdbcDaoImpl implements BaseJdbcDao {
 
     @Resource
     protected JdbcTemplate primaryJdbcTemplate;
 
     @Override
-    public <K extends BaseEntity> K findById(Class<K> clazz, Serializable id) {
+    public <K> K findById(Class<K> clazz, Serializable id) {
         return this.findById(clazz, primaryJdbcTemplate, id);
     }
 
     @Override
-    public <K extends BaseEntity> K findById(Class<K> clazz, JdbcTemplate jdbcTemplate, Serializable id) {
+    public <K> K findById(Class<K> clazz, JdbcTemplate jdbcTemplate, Serializable id) {
         try {
             K entity = clazz.getDeclaredConstructor().newInstance();
-            entity.setId(id);
+            SqlStaff staff = getSql(entity, PersistenceType.FIND_BY_ID);
+            staff.setId(id);
             return findById(entity, jdbcTemplate);
         } catch (Exception e) {
             throw new RuntimeException(e);
@@ -52,16 +52,16 @@ public class BaseJdbcDaoImpl implements BaseJdbcDao {
     }
 
     @Override
-    public <K extends BaseEntity> K findById(K entity) {
+    public <K> K findById(K entity) {
         return this.findById(entity, primaryJdbcTemplate);
     }
 
     @Override
-    public <K extends BaseEntity> K findById(K entity, JdbcTemplate jdbcTemplate) {
-        String sql = getSql(entity, "findById");
-        SqlParameterSource params = new BeanPropertySqlParameterSource(entity);
+    public <K> K findById(K entity, JdbcTemplate jdbcTemplate) {
+        SqlStaff staff = getSql(entity, PersistenceType.FIND_BY_ID);
+        SqlParameterSource params = new BeanPropertySqlParameterSource(staff.getSqlArgs());
         NamedParameterJdbcTemplate template = new NamedParameterJdbcTemplate(jdbcTemplate);
-        return template.queryForObject(sql, params, new BeanPropertyRowMapper<K>((Class<K>) entity.getClass()));
+        return template.queryForObject(staff.getSql(), params, new BeanPropertyRowMapper<K>((Class<K>) entity.getClass()));
     }
 
     @Override
@@ -141,53 +141,42 @@ public class BaseJdbcDaoImpl implements BaseJdbcDao {
     }
 
     @Override
-    public void insert(BaseEntity entity) {
+    public void insert(Collection<Object> entities) {
+        entities.forEach(this::insert);
+    }
+
+    @Override
+    public void insert(Object entity) {
         insert(entity, primaryJdbcTemplate);
     }
 
     @Override
-    public void insert(BaseEntity entity, JdbcTemplate jdbcTemplate) {
-        String sql = getSql(entity, "insert");
-        WebLogs.sql(sql);
+    public void insert(Object entity, JdbcTemplate jdbcTemplate) {
+        SqlStaff staff = getSql(entity, PersistenceType.INSERT);
+        WebLogs.sql(staff.getSql());
         SqlParameterSource params = new BeanPropertySqlParameterSource(entity);
         NamedParameterJdbcTemplate template = new NamedParameterJdbcTemplate(jdbcTemplate);
         GeneratedKeyHolder generatedKeyHolder = new GeneratedKeyHolder();
-        int rowsAffected = template.update(sql, params, generatedKeyHolder);
-        Integer id = generatedKeyHolder.getKey().intValue();
-        entity.setId(id);
+        template.update(staff.getSql(), params, generatedKeyHolder);
+        Integer key = generatedKeyHolder.getKey().intValue();
+        staff.setId(key);
     }
 
     @Override
-    public void update(BaseEntity entity) {
+    public void update(Object entity) {
         update(entity, primaryJdbcTemplate);
     }
 
     @Override
-    public void update(BaseEntity entity, JdbcTemplate jdbcTemplate) {
-        String sql = getSql(entity, "update");
+    public void update(Object entity, JdbcTemplate jdbcTemplate) {
+        SqlStaff staff = getSql(entity, PersistenceType.UPDATE);
         SqlParameterSource params = new BeanPropertySqlParameterSource(entity);
         NamedParameterJdbcTemplate template = new NamedParameterJdbcTemplate(jdbcTemplate);
-        int rowsAffected = template.update(sql, params);
+        int rowsAffected = template.update(staff.getSql(), params);
     }
 
-    @Override
-    public void insertOrUpdate(BaseEntity entity) {
-        insertOrUpdate(entity, primaryJdbcTemplate);
-    }
-
-    @Override
-    public void insertOrUpdate(BaseEntity entity, JdbcTemplate jdbcTemplate) {
-        if (CommonUtil.isNotEmpty(entity.getId())) {
-            BaseEntity en = findById(entity, jdbcTemplate);
-            if (en == null) insert(entity, jdbcTemplate);
-            else update(entity, jdbcTemplate);
-            return;
-        }
-        insert(entity, jdbcTemplate);
-    }
-
-    private String getSql(BaseEntity entity, String flag) {
-        Class<? extends BaseEntity> clazz = entity.getClass();
+    private SqlStaff getSql(Object entity, PersistenceType persistenceType) {
+        Class<?> clazz = entity.getClass();
         Table table = clazz.getAnnotation(Table.class);
         String tableName = table.name();
         if (CommonUtil.isEmpty(tableName)) tableName = CommonUtil.toLowerUnderscore(clazz.getSimpleName());
@@ -205,54 +194,94 @@ public class BaseJdbcDaoImpl implements BaseJdbcDao {
                 if (CommonUtil.isEmpty(columnName)) columnName = CommonUtil.toLowerUnderscore(fieldName);
                 columnMap.put(columnName, fieldName);
                 if (id != null) idMap.put(columnName, fieldName);
+
+                // 自动注入值
+                AutoSet autoSet = field.getAnnotation(AutoSet.class);
+                if (autoSet != null) {
+                    AutoSetFun[] autoSetFuns = autoSet.value();
+                    for (AutoSetFun autoSetFun : autoSetFuns) {
+                        autoSetFun.fun.exec(persistenceType, field, entity);
+                    }
+                }
             }
         }
         String sql = null;
-        SysUserDTO sysUserInfo = null;
-        try {
-            sysUserInfo = (SysUserDTO) StpUtil.getSession().get("sysUserInfo");
-            if (entity.getDeleted() == null) entity.setCreateBy(sysUserInfo.getId());
-        } catch (Exception e) {
-        }
-        if ("insert".equals(flag)) {
-            if (entity.getCreateTime() == null) entity.setCreateTime(LocalDateTime.now());
-            if (sysUserInfo != null) {
-                if (entity.getDeleted() == null) entity.setCreateBy(sysUserInfo.getId());
-            }
-            if (entity.getDeleted() == null) entity.setDeleted(false);
-            String formatStr = "INSERT INTO `%s` (%s) VALUES (%s)";
+        if (persistenceType == PersistenceType.INSERT) {
             String columnStr = columnMap.keySet().stream().collect(Collectors.joining("`,`", "`", "`"));
             String valueStr = columnMap.values().stream().map(i -> ":" + i).collect(Collectors.joining(","));
-            sql = String.format(formatStr, tableName, columnStr, valueStr);
-        } else if ("update".equals(flag)) {
-            entity.setUpdateTime(LocalDateTime.now());
-            if (sysUserInfo != null) {
-                if (entity.getUpdateBy() == null) entity.setUpdateBy(sysUserInfo.getId());
-            }
-            String formatStr = "UPDATE `%s` SET %s WHERE %s";
+            sql = "INSERT INTO `%s` (%s) VALUES (%s)".formatted(tableName, columnStr, valueStr);
+        } else if (persistenceType == PersistenceType.UPDATE) {
             String columnMapStr = columnMap.entrySet().stream().map(i -> String.format("`%s`=:%s", i.getKey(), i.getValue())).collect(Collectors.joining(","));
             String idMapStr = idMap.entrySet().stream().map(i -> String.format("`%s`=:%s", i.getKey(), i.getValue())).collect(Collectors.joining(" and "));
-            sql = String.format(formatStr, tableName, columnMapStr, idMapStr);
-        } else if ("findById".equals(flag)) {
-            String formatStr = "select %s FROM `%s` WHERE %s";
+            sql = "UPDATE `%s` SET %s WHERE %s".formatted(tableName, columnMapStr, idMapStr);
+        } else if (persistenceType == PersistenceType.FIND_BY_ID) {
             String columnMapStr = columnMap.entrySet().stream().map(i -> String.format("`%s` as `%s`", i.getKey(), i.getValue())).collect(Collectors.joining(","));
             String idMapStr = idMap.entrySet().stream().map(i -> String.format("`%s`=:%s", i.getKey(), i.getValue())).collect(Collectors.joining(" and "));
-            sql = String.format(formatStr, columnMapStr, tableName, idMapStr);
+            sql = "select %s FROM `%s` WHERE %s".formatted(columnMapStr, tableName, idMapStr);
         }
-        return sql;
+
+        SqlStaff sqlStaff = new SqlStaff();
+        sqlStaff.setEntity(entity);
+        sqlStaff.setClazz(clazz);
+        sqlStaff.setTable(tableName);
+        sqlStaff.setColumnMap(columnMap);
+        sqlStaff.setIdMap(idMap);
+        sqlStaff.setPersistenceType(persistenceType);
+        sqlStaff.setSql(sql);
+        sqlStaff.setSqlArgs(entity);
+
+        return sqlStaff;
     }
 
     /**
      * 获取数据库类型
      */
+    private static String dbType = null;
+
     protected String getDbType(JdbcTemplate jdbcTemplate) {
-        String dbType;
-        try (Connection connection = Objects.requireNonNull(jdbcTemplate.getDataSource()).getConnection()) {
-            dbType = connection.getMetaData().getDatabaseProductName();
-            return dbType;
-        } catch (SQLException e) {
-            e.printStackTrace();
-            throw new RuntimeException(e);
+        if (dbType == null) {
+            try (Connection connection = Objects.requireNonNull(jdbcTemplate.getDataSource()).getConnection()) {
+                dbType = connection.getMetaData().getDatabaseProductName();
+                return dbType;
+            } catch (SQLException e) {
+                log.error(e.getMessage(), e);
+                throw new RuntimeException(e);
+            }
+        }
+        return dbType;
+    }
+
+
+    @Data
+    static class SqlStaff {
+        private Object entity;
+
+        private Class<?> clazz;
+
+        private String table;
+
+        private PersistenceType persistenceType;
+
+        private Map<String, String> idMap;
+
+        private Map<String, String> columnMap;
+
+        private String sql;
+
+        private Object sqlArgs;
+
+        //设置主键值
+        public void setId(Object id) {
+            for (String fieldName : this.idMap.values()) {
+                Field field = CommonUtil.getField(this.clazz, fieldName);
+                field.setAccessible(true);
+                try {
+                    if (field.get(this.entity) == null)
+                        field.set(this.entity, id);
+                } catch (IllegalAccessException e) {
+                    throw new RuntimeException(e);
+                }
+            }
         }
     }
 }
